@@ -1,0 +1,2 @@
+# Some RSS feeds incorrectly use non-standard date formats.
+datetime.extra.masks=EEE, d MMM yyyy HH:mm:ss
