@@ -26,6 +26,8 @@ Changes in version 1.2
 
 * Now requires Java 6 or later.
 
+* Added filter to exclude articles where headlines match a certain regex.
+
 
 Changes in version 1.1
 ----------------------
